--- a/StudentSystem/Views/Home/About.cshtml
+++ b/StudentSystem/Views/Home/About.cshtml
@@ -2,6 +2,6 @@
     ViewBag.Title = "About";
 }
 <h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+
+<p>You can have additional Info about the Student here{Not yet fully developed}</p>
