--- a/StudentSystem/Views/Register/Details.cshtml
+++ b/StudentSystem/Views/Register/Details.cshtml
@@ -42,7 +42,9 @@
             </dd>
             <p>
                 @Html.ActionLink("Edit", "Edit", new { name = item.stuName, id = item._id })
-                @Html.ActionLink("Delete", "Delete", new { name = item.stuName })
+                &nbsp;&nbsp;&nbsp;
+                @Html.ActionLink("Delete", "Delete", new { name = item.stuName, id = item._id })
+                &nbsp;&nbsp;&nbsp;
                 @Html.ActionLink("Back to List", "Index")
 
             </p>
