--- a/StudentSystem/Views/Register/Index.cshtml
+++ b/StudentSystem/Views/Register/Index.cshtml
@@ -13,7 +13,7 @@
 
             <li>
                 @Html.Label("Student") @i &nbsp;<span>:</span>
-                @Html.ActionLink(item.stuName, "Details", new { name = item.stuName })
+                @Html.ActionLink(item.stuName, "Details", new { id = item._id })
 
             </li>
             
