--- a/StudentSystem/Views/Register/Edit.cshtml
+++ b/StudentSystem/Views/Register/Edit.cshtml
@@ -12,7 +12,7 @@
     <div class="form-group">
         @Html.Label("Student Name", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.stuName, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.Label(Model.stuName)
         </div>
     </div>
 
@@ -20,25 +20,16 @@
         @Html.Label("Email", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.EditorFor(model => model.email, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.email, "Enter Valid Email", new { @class = "text-danger" })
+            @Html.ValidationMessageFor(model => model.email, "", new { @class = "text-danger" })
         </div>
     </div>
-
-    <!--<div class="form-group">
-       // Html.Label("Password", htmlAttributes: new { class = "control-label col-md-2" })
-        <div class="col-md-10">
-            Html.EditorFor(model => model.pwd, new { htmlAttributes = new { class = "form-control" } })
-            Html.ValidationMessageFor(model => model.pwd, "Enter a valid password", new { class = "text-danger" })
-        </div>
-    </div>-->
-
 
 
     <div class="form-group">
         @Html.Label("Phone Number", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.EditorFor(model => model.mobNo, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.mobNo, "Not a valid mob number", new { @class = "text-danger" })
+            @Html.ValidationMessageFor(model => model.mobNo, "", new { @class = "text-danger" })
         </div>
     </div>
 
@@ -46,13 +37,13 @@
         @Html.Label("Address", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.EditorFor(model => model.Address, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Address, "Address is not valid", new { @class = "text-danger" })
+            @Html.ValidationMessageFor(model => model.Address, "", new { @class = "text-danger" })
         </div>
     </div>
 
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Save" class="btn btn-danger" />
+            <input type="submit" value="Save" formmethod="post" class="btn btn-danger" />
         </div>
     </div>
 </div>
