--- a/StudentSystem/Views/Register/Register.cshtml
+++ b/StudentSystem/Views/Register/Register.cshtml
@@ -3,7 +3,7 @@
 
 <div class="Form">
     <h1>Register </h1>
-    <form method="post" action="">
+    <form  action ="" >
 
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.Label("Student Name", new { @class = "", @id = "Sname" })<br />
@@ -30,13 +30,13 @@
         <br />
         @Html.Label("Address")<br />
         @Html.TextBoxFor(Model => Model.Address, new { @class = "name form-control" })
-        @Html.ValidationMessageFor(model => model.Address, "", new { @class = "text-danger" })
+        @Html.ValidationMessageFor(model => model.Address)
         <br />
 
 
 
 
-        <button id="butt" class="btn btn-success " type="submit">Submit</button>
+        <button id="butt" class="btn btn-success " type="submit" formmethod="post" >Submit</button>
     </form>
     <script src="~/Content/Validation.js" type="text/javascript"></script>
 </div>
