--- a/StudentSystem/Content/Register.css
+++ b/StudentSystem/Content/Register.css
@@ -4,12 +4,12 @@
     margin-left: 350px;
     padding: 30px;
     box-shadow: 5px 5px #756f6f;
-    height: 800px;
+    height: 870px;
     width: 350px;
    
     
-   //filter:blur(8px);
-  // -webkit-filter: blur(8px);
+   filter:blur(0.5px);
+   -webkit-filter: blur(0.5px);
 }
 h1 {
     font-size:54px;
@@ -28,7 +28,7 @@ body{
     
 }
 #butt {
-    margin:30px 100px;
+    margin:0px 100px;
 
 }
 #countryCode {
@@ -38,7 +38,7 @@ width:50px;
 #FormBegin {
     margin-top: 30px;
     z-index: 999999;
-    background-image: url("../Images/back.jpg");
+    background-image: url("../Images/black-background.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
