--- a/StudentSystem/Content/Site.css
+++ b/StudentSystem/Content/Site.css
@@ -7,6 +7,8 @@
 .body-content {
     padding-left: 15px;
     padding-right: 15px;
+    background:linear-gradient(180deg,#b4afaf,,0.9);
+
 }
 
 /* Override the default bootstrap behavior where horizontal description lists 
