--- a/StudentSystem/Content/Register.css
+++ b/StudentSystem/Content/Register.css
@@ -1,15 +1,16 @@
 ﻿.Form {
     border: 1px solid #756f6f;
     border-radius: 15px;
-    margin-left: 350px;
+    //margin-left: 350px;
     padding: 30px;
-    box-shadow: 5px 5px #756f6f;
+    box-shadow: 5px 5px #a4a1a1;
     height: 870px;
     width: 350px;
    
+
     
-   filter:blur(0.5px);
-   -webkit-filter: blur(0.5px);
+   filter:blur(0px);
+   -webkit-filter: blur(0px);
 }
 h1 {
     font-size:54px;
@@ -37,8 +38,9 @@ width:50px;
 }
 #FormBegin {
     margin-top: 30px;
-    z-index: 999999;
-    background-image: url("../Images/black-background.jpg");
+    
+    //background-image: url("../Images/black-background.jpg");
+    background-color:#424040;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -50,4 +52,8 @@ width:50px;
 }
 .Error {
     visibility:hidden;
+}
+#Form-Body {
+    padding-left:20px;
+    padding-right:20px;
 }
