--- a/StudentSystem/Views/Register/Register.cshtml
+++ b/StudentSystem/Views/Register/Register.cshtml
@@ -1,56 +1,56 @@
 ﻿@model StudentSystem.Models.Student
+<div class="row text-center">
+    <div class=" col-md-12 col-xs-10 Form col-xs-push-1 col-lg-push-5 col-md-push-5 col-md-pull-5 col-sm-push-4 col-xl-push-4"  id="FormBegin" >
 
-<div class="row ">
-    <div class="Form" id="FormBegin">
         <h1>Register </h1>
 
 
 
-        <div class=" col-xs-12 justify-content-center">
-            <form id="Form-Body">
 
-                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                @Html.Label("Student Name", new { @class = "form-font", @id = "Sname" })<br />
-                @Html.TextBoxFor(Model => Model.stuName, new { @class = "name form-control ", })
-                @Html.ValidationMessageFor(model => model.stuName, "", new { @class = "text-danger" })<br />
-                <span class="Error" id="nameErr">Error</span>
-                <br />
+        <form id="Form-Body">
 
-                @Html.Label("Email", new { @class = "form-font" })<br />
-                @Html.TextBoxFor(Model => Model.email, new { type = "email", @class = "name form-control " })
-                @Html.ValidationMessageFor(model => model.email, "", new { @class = "text-danger" })<br />
-                <span class="Error" id="emailErr"></span>
-                <br />
-                @Html.Label("Password", new { @class = "form-font" })<br />
-                @Html.PasswordFor(Model => Model.pwd, new { @class = "name form-control", @id = "pwd" })
-                @Html.ValidationMessageFor(model => model.pwd, "", new { @class = "text-danger" })<br />
-                <span class="Error" id="pwdErr"></span>
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            @Html.Label("Student Name", new { @class = "form-font", @id = "Sname" })<br />
+            @Html.TextBoxFor(Model => Model.stuName, new { @class = "name form-control ", })
+            @Html.ValidationMessageFor(model => model.stuName, "", new { @class = "text-danger" })<br />
+            <span class="Error" id="nameErr">Error</span>
+            <br />
 
-                <br />
-                @Html.Label("Confirm Password", new { @class = "form-font" })<br />
-                @Html.Password("Confirm", "", new { @class = "name form-control", @id = "cpwd" })<br />
-                <span class="Error" id="cpwdErr"></span>
+            @Html.Label("Email", new { @class = "form-font" })<br />
+            @Html.TextBoxFor(Model => Model.email, new { type = "email", @class = "name form-control " })
+            @Html.ValidationMessageFor(model => model.email, "", new { @class = "text-danger" })<br />
+            <span class="Error" id="emailErr"></span>
+            <br />
+            @Html.Label("Password", new { @class = "form-font" })<br />
+            @Html.PasswordFor(Model => Model.pwd, new { @class = "name form-control", @id = "pwd" })
+            @Html.ValidationMessageFor(model => model.pwd, "", new { @class = "text-danger" })<br />
+            <span class="Error" id="pwdErr"></span>
 
-                <br />
-                @Html.Label("Mobile Number", new { @class = "form-font" })<br />
-                <select id="countryCode"></select>
-                @Html.TextBoxFor(Model => Model.mobNo, new { @class = "name form-control" })
-                @Html.ValidationMessageFor(model => model.mobNo, "", new { @class = "text-danger" })<br />
-                <span class="Error" id="mobErr"></span>
-                <br />
-                @Html.Label("Address", new { @class = "form-font" })<br />
-                @Html.TextBoxFor(Model => Model.Address, new { @class = "name form-control" })
-                @Html.ValidationMessageFor(model => model.Address, "", new { @class = "text-danger" })<br />
-                <span class="Error" id="addrErr"></span>
-                <br />
+            <br />
+            @Html.Label("Confirm Password", new { @class = "form-font" })<br />
+            @Html.Password("Confirm", "", new { @class = "name form-control", @id = "cpwd" })<br />
+            <span class="Error" id="cpwdErr"></span>
 
-
+            <br />
+            @Html.Label("Mobile Number", new { @class = "form-font" })<br />
+            <select id="countryCode"></select>
+            @Html.TextBoxFor(Model => Model.mobNo, new { @class = "name form-control" })
+            @Html.ValidationMessageFor(model => model.mobNo, "", new { @class = "text-danger" })<br />
+            <span class="Error" id="mobErr"></span>
+            <br />
+            @Html.Label("Address", new { @class = "form-font" })<br />
+            @Html.TextBoxFor(Model => Model.Address, new { @class = "name form-control" })
+            @Html.ValidationMessageFor(model => model.Address, "", new { @class = "text-danger" })<br />
+            <span class="Error" id="addrErr"></span>
+            <br />
 
 
-                <button id="butt" class="btn btn-success " type="submit" formmethod="post">Submit</button>
-            </form>
-            <script src="~/Scripts/Validation.js" type="text/javascript"></script>
-            <script src="~/Scripts/countryCode.js"></script>
-        </div>
+
+
+            <button id="butt" class="btn btn-success " type="submit" formmethod="post">Submit</button>
+        </form>
+        <script src="~/Scripts/Validation.js" type="text/javascript"></script>
+        <script src="~/Scripts/countryCode.js"></script>
+
     </div>
 </div>
