--- a/StudentSystem/Views/Shared/_Layout.cshtml
+++ b/StudentSystem/Views/Shared/_Layout.cshtml
@@ -28,19 +28,21 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                    <li>@Html.ActionLink("Register", "Register","Register")</li>
+                    <li>@Html.ActionLink("Register", "Register", "Register")</li>
                 </ul>
             </div>
         </div>
     </div>
-    <div class="container body-content">
+    <div class=" body-content">
         @RenderBody()
         <hr />
+
+    </div>
+    <div class="row text-center">
         <footer>
             <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
         </footer>
     </div>
-
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
