Routing Problrms after signing in

--- a/StudentSystem/Views/Login/Login.cshtml
+++ b/StudentSystem/Views/Login/Login.cshtml
@@ -12,11 +12,11 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10 col-xs-10">
-                @Html.DisplayFor(Model => Model.Email)
+                @Html.LabelFor(Model => Model.Email)
                 @Html.TextBoxFor(model => model.Email, new { @class = "form-control" })
-                @Html.DisplayFor(Model => Model.Password)
+                @Html.LabelFor(Model => Model.Password)
                 @Html.PasswordFor(Model => Model.Password, new { @class = "name form-control", @id = "pwd" })
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Log In" class="btn btn-default" />
             </div>
         </div>
     </div>
