--- a/StudentSystem/Content/Register.css
+++ b/StudentSystem/Content/Register.css
@@ -4,7 +4,7 @@
     
     padding: 30px;
     box-shadow: 5px 5px #a4a1a1;
-    height: 870px;
+    height: 700px;
     width: 350px;
    
 
@@ -40,7 +40,7 @@ width:50px;
     margin-top: 30px;
     
     
-    background-color:#424040;
+    //background-color:#424040;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
