--- a/StudentSystem/Views/Login/Login.cshtml
+++ b/StudentSystem/Views/Login/Login.cshtml
@@ -7,15 +7,16 @@
     
     <div class="form-horizontal">
         <h4>Login</h4>
+        <h5>@ViewData["SignINerror "]</h5>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10 col-xs-10">
                 @Html.LabelFor(Model => Model.Email)
-                @Html.TextBoxFor(model => model.Email, new { @class = "form-control" })
+                @Html.EditorFor(model => model.Email, new { @class = "form-control" })
                 @Html.LabelFor(Model => Model.Password)
-                @Html.PasswordFor(Model => Model.Password, new { @class = "name form-control", @id = "pwd" })
+                @Html.PasswordFor(Model => Model.Password, new { @class = "name form-control", id = "pwd" })
                 <input type="submit" value="Log In" class="btn btn-default" />
             </div>
         </div>
