--- a/StudentSystem/Content/Register.css
+++ b/StudentSystem/Content/Register.css
@@ -40,7 +40,7 @@ width:50px;
     margin-top: 30px;
     
     
-    //background-color:#424040;
+    background-color:#424040;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
