--- a/StudentSystem/Views/Register/Register.cshtml
+++ b/StudentSystem/Views/Register/Register.cshtml
@@ -1,30 +1,30 @@
-﻿@model Tuple<Student,School>
-  
+﻿@model StudentSystem.Models.Student
+    @using StudentSystem.Models;
 <div class="row text-center">
     <div class=" col-md-12 col-xs-10 Form col-xs-push-1 col-lg-push-5 col-md-push-5 col-md-pull-5 col-sm-push-4 col-xl-push-4"  id="FormBegin" >
 
         <h1>Register </h1>
         
-        @using StudentSystem.Models; 
-   
-   
+
+      
+
         <form id="Form-Body">
 
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-            @Html.TextBoxFor(s => s., new { @class = "name form-control ", placeholder = "Enter the Student Name" })
-            @Html.ValidationMessageFor(model => model.Item1.stuName, "", new { @class = "text-danger" })<br />
+            @Html.TextBoxFor(Model => Model.stuName, new { @class = "name form-control ", placeholder = "Enter the Student Name" })
+            @Html.ValidationMessageFor(model => model.stuName, "", new { @class = "text-danger" })<br />
             <span class="Error" id="nameErr">Error</span>
             <br />
 
 
-            @Html.TextBoxFor(Model => Model.Item1.email, new { type = "email", @class = "name form-control ", placeholder = "Enter your Email Address" })
-            @Html.ValidationMessageFor(model => model.Item1.email, "", new { @class = "text-danger" })<br />
+            @Html.TextBoxFor(Model => Model.email, new { type = "email", @class = "name form-control ", placeholder = "Enter your Email Address" })
+            @Html.ValidationMessageFor(model => model.email, "", new { @class = "text-danger" })<br />
             <span class="Error" id="emailErr"></span>
             <br />
 
-            @Html.PasswordFor(Model => Model.Item1.pwd, new { @class = "name form-control", @id = "pwd", placeholder = "Password" })
-            @Html.ValidationMessageFor(model => model.Item1.pwd, "", new { @class = "text-danger" })<br />
+            @Html.PasswordFor(Model => Model.pwd, new { @class = "name form-control", @id = "pwd", placeholder = "Password" })
+            @Html.ValidationMessageFor(model => model.pwd, "", new { @class = "text-danger" })<br />
             <span class="Error" id="pwdErr"></span>
 
             <br />
@@ -35,22 +35,24 @@
             <br />
 
             <select id="countryCode"></select>
-            @Html.TextBoxFor(Model => Model.Item1.mobNo, new { @class = "name form-control", placeholder = "Enter mobile Number" })
-            @Html.ValidationMessageFor(model => model.Item1.mobNo, "", new { @class = "text-danger" })<br />
+            @Html.TextBoxFor(Model => Model.mobNo, new { @class = "name form-control", placeholder = "Enter mobile Number" })
+            @Html.ValidationMessageFor(model => model.mobNo, "", new { @class = "text-danger" })<br />
             <span class="Error" id="mobErr"></span>
             <br />
 
-            @Html.TextBoxFor(Model => Model.Item1.Address, new { @class = "name form-control", placeholder = "Address" })
-            @Html.ValidationMessageFor(model => model.Item1.Address, "", new { @class = "text-danger" })<br />
+            @Html.TextBoxFor(Model => Model.Address, new { @class = "name form-control", placeholder = "Address" })
+            @Html.ValidationMessageFor(model => model.Address, "", new { @class = "text-danger" })<br />
             <span class="Error" id="addrErr"></span>
             <br />
-            @Html.TextBoxFor(Model => Model.Item2.SchoolName, new { @class = "name form-control", placeholder = "School Name" })
-            @Html.ValidationMessageFor(model => model.Item2.SchoolName, "", new { @class = "text-danger" })<br />
+
+            @Html.TextBoxFor(Model => Model.SchoolName, new { @class = "name form-control", placeholder = "School Name" })
+            @Html.ValidationMessageFor(model => model.SchoolName, "", new { @class = "text-danger" })
             <span class="Error" id="addrErr"></span>
-            <br />
-            <p>
-                @{Html.RenderAction("Action")}
-            </p>
+
+
+
+
+
 
             <button id="butt" class="btn btn-success " type="submit" formmethod="post">Submit</button>
         </form>
