--- a/StudentSystem/Views/Register/Register.cshtml
+++ b/StudentSystem/Views/Register/Register.cshtml
@@ -48,16 +48,12 @@
             @Html.TextBoxFor(Model => Model.SchoolName, new { @class = "name form-control", placeholder = "School Name" })
             @Html.ValidationMessageFor(model => model.SchoolName, "", new { @class = "text-danger" })
             <span class="Error" id="addrErr"></span>
-
-
-
-
-
-
-            <button id="butt" class="btn btn-success " type="submit" formmethod="post">Submit</button>
+          <button id="butt" class="btn btn-success " type="submit" formmethod="post">Submit</button>
         </form>
         <script src="~/Scripts/Validation.js" type="text/javascript"></script>
         <script src="~/Scripts/countryCode.js"></script>
-
+        <h4 style="color:azure">
+            Already an User?? Then @Html.ActionLink("Sign In", "Login","Login")
+        </h4>
     </div>
 </div>
