--- a/StudentSystem/Views/Shared/_Layout.cshtml
+++ b/StudentSystem/Views/Shared/_Layout.cshtml
@@ -13,6 +13,9 @@
     <link rel="stylesheet" type="text/css" href="~/Content/Register.css" />
 </head>
 <body>
+   
+      
+
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
@@ -29,10 +32,12 @@
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                     <li>@Html.ActionLink("Register", "Register", "Register")</li>
+                    @Html.Partial("LoginPartial")
                 </ul>
             </div>
         </div>
     </div>
+           
     <div class=" body-content ">
         @RenderBody()
         <hr />
@@ -40,7 +45,7 @@
     </div>
     <div class="row text-center">
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - My Application</p>
         </footer>
     </div>
     @Scripts.Render("~/bundles/jquery")
