changes on Account files

--- a/StudentSystem/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/StudentSystem/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebApplication1.Models.ExternalLoginConfirmationViewModel
+﻿@model StudentSystem.Models.ExternalLoginConfirmationViewModel
 @{
     ViewBag.Title = "Register";
 }
