--- a/StudentSystem/Views/Account/ForgotPassword.cshtml
+++ b/StudentSystem/Views/Account/ForgotPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebApplication1.Models.ForgotPasswordViewModel
+﻿@model StudentSystem.Models.ForgotPasswordViewModel
 @{
     ViewBag.Title = "Forgot your password?";
 }
