--- a/StudentSystem/Views/Account/Register.cshtml
+++ b/StudentSystem/Views/Account/Register.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebApplication1.Models.RegisterViewModel
+﻿@model StudentSystem.Models.RegisterViewModel
 @{
     ViewBag.Title = "Register";
 }
