--- a/StudentSystem/Views/Account/VerifyCode.cshtml
+++ b/StudentSystem/Views/Account/VerifyCode.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebApplication1.Models.VerifyCodeViewModel
+﻿@model StudentSystem.Models.VerifyCodeViewModel
 @{
     ViewBag.Title = "Verify";
 }
