--- a/StudentSystem/Views/Shared/LoginPartial.cshtml
+++ b/StudentSystem/Views/Shared/LoginPartial.cshtml
@@ -10,9 +10,9 @@
 
 <ul class="nav navbar-nav navbar-right">
     
-    <li>@Html.ActionLink("Attendance", "Attendance", "Attendance", "Attendance", new { })</li>
+    <li>@Html.ActionLink("Attendance", "Attendance", "Attendance", "Attendance",new { id= ""})</li>
     
-    <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
+    <li><a href="#" onclick="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
 </ul>
     }
 }
