--- a/StudentSystem/Views/Register/Register.cshtml
+++ b/StudentSystem/Views/Register/Register.cshtml
@@ -1,5 +1,5 @@
 ﻿@model StudentSystem.Models.Student
-    @using StudentSystem.Models;
+  
 <div class="row text-center">
 
     <div class=" col-md-12 col-xs-10 Form col-xs-push-1 col-lg-push-5 col-md-push-5 col-md-pull-5 col-sm-push-4 col-xl-push-4"  id="FormBegin" >
@@ -45,11 +45,13 @@
             @Html.ValidationMessageFor(model => model.Address, "", new { @class = "text-danger" })
             <span class="Error" id="addrErr"></span>
             <br />
+            @Html.TextBoxFor(Model => Model.classname, new { @class = "name form-control", placeholder = "Class Name" })
+            @Html.ValidationMessageFor(model => model.classname, "", new { @class = "text-danger" })
 
             @Html.TextBoxFor(Model => Model.SchoolName, new { @class = "name form-control", placeholder = "School Name" })
             @Html.ValidationMessageFor(model => model.SchoolName, "", new { @class = "text-danger" })
             <span class="Error" id="addrErr"></span>
-          <button id="butt" class="btn btn-success " type="submit" formmethod="post">Submit</button>
+            <button id="butt" class="btn btn-success " type="submit" formmethod="post">Submit</button>
         </form>
         <script src="~/Scripts/Validation.js" type="text/javascript"></script>
         <script src="~/Scripts/countryCode.js"></script>
