--- a/StudentSystem/Views/Shared/LoginPartial.cshtml
+++ b/StudentSystem/Views/Shared/LoginPartial.cshtml
@@ -10,7 +10,7 @@
 
 <ul class="nav navbar-nav navbar-right">
     
-    <li>@Html.ActionLink("Attendance", "Attendance", "Attendance", "Attendance",new { id= ""})</li>
+    
     
     <li><a href="#" onclick="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
 </ul>
@@ -19,7 +19,7 @@
 else
 {
     <ul class="nav navbar-nav navbar-right">
-     
+        <li>@Html.ActionLink("Add Student", "Register", "Register")</li>
         <li>@Html.ActionLink("Log in", "Login", "Login", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
     </ul>
 }
