--- a/StudentSystem/Views/Shared/LoginPartial.cshtml
+++ b/StudentSystem/Views/Shared/LoginPartial.cshtml
@@ -8,18 +8,27 @@
     {
         @Html.AntiForgeryToken()
 
-<ul class="nav navbar-nav navbar-right">
-    
-    
-    
-    <li><a href="#" onclick="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
+<ul class="nav navbar-nav navbar-right dropdown">
+
+
+    <li class="">
+
+        @Html.ActionLink("Add Student", "Register", "Register")
+    </li>
+    <li>
+        @Html.ActionLink(" Details","Index", "Register")
+       
+
+
+    </li>
+    <li><a href="@Url.Action("Logout","Login")">Log off</a></li>
 </ul>
     }
 }
 else
 {
     <ul class="nav navbar-nav navbar-right">
-        <li>@Html.ActionLink("Add Student", "Register", "Register")</li>
+       
         <li>@Html.ActionLink("Log in", "Login", "Login", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
     </ul>
 }
