--- a/StudentSystem/Views/Shared/_Layout.cshtml
+++ b/StudentSystem/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Student Portal", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Student Portal", "Index", "Home", new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -38,7 +38,7 @@
         </div>
     </div>
            
-    <div class=" body-content ">
+    <div class=" body-content container ">
         @RenderBody()
         <hr />
 
